--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin id="com.firebase.sdk" version="1.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>Firebase</name>
-	<description>Firebase Cordova API</description>
+	<description>Firebase Cordova SDK</description>
 
 	<js-module name="firebase" src="www/firebase/firebase.js">
 		<clobbers target="firebase" />
