--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.firebase.sdk" version="1.1.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- NOTE: keep version in sync with the wrapped firebase.js version -->
+<plugin
+		id="com.firebase.sdk"
+		version="3.0.4"
+		xmlns="http://apache.org/cordova/ns/plugins/1.0">
+
 	<name>Firebase</name>
 	<description>Firebase Cordova SDK</description>
 
