#3 Update to SDK 3 - fix cordova-firebase wiring - fixed the fix even

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <!-- NOTE: keep version in sync with the wrapped firebase.js version -->
 <plugin
 		id="com.firebase.sdk"
-		version="3.0.4.1"
+		version="3.0.4.2"
 		xmlns="http://apache.org/cordova/ns/plugins/1.0">
 
 	<name>Firebase</name>
@@ -11,5 +11,7 @@
 	<js-module name="firebase" src="www/firebase/firebase.js">
 		<clobbers target="firebase" />
 	</js-module>
+
+	<asset src="www/firebase/firebase-impl.js" target="plugins/com.firebase.sdk/www/firebase/firebase-impl.js" />
 
 </plugin>
